# jays-tools

./: .gitignore  ARCHITECTURE.md  PHILOSOPHY.md  README.md  pyproject.toml  upload_to_pypi.py
src/jays_tools/: __init__.py
src/jays_tools/architecture/: __init__.py  base.py  models.py
src/jays_tools/domain/: table.py
src/jays_tools/json_collection/: __init__.py  factory.py  json_collection.py
src/jays_tools/json_database/: __init__.py  database.py  factory.py  file.py  models.py
src/jays_tools/services/: __init__.py  base.py
src/jays_tools/sql_database/: __init__.py  database.py  filters.py  models.py  row.py
tests/: test_architecture.py  test_database.py  test_filters_and_batch.py  test_json_collection.py  test_json_database.py  test_services.py  test_table.py
