[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jays-tools"
version = "0.1.8"
description = "A collection of reusable utilities across projects I work on."
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jays_tools"]