[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jays-tools"
version = "3.2.0"
description = "A collection of reusable utilities across projects I work on."
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pydantic==2.12.5",
    "aiosqlite==0.22.1",
    "typing_extensions==4.15.0",
]

# Optional dependencies for development
# Install with: pip install -e ".[dev]"
# This lets developers run tests without installing them for end users
[project.optional-dependencies]
dev = [
    "pytest==9.0.3",           # Testing framework
    "pytest-cov==7.1.0",       # Code coverage reports
    "pytest-asyncio==1.3.0",   # Async test support (for @pytest.mark.asyncio)
]

[tool.hatch.build.targets.wheel]
packages = ["src/jays_tools"]

# Pytest configuration
# Tells pytest where to find tests and how to run them
[tool.pytest.ini_options]
pythonpath = ["."]                      # Add current directory to Python path so src.jays_tools can be found
testpaths = ["tests"]                   # Where to look for tests
python_files = "test_*.py"              # Test file naming pattern
python_classes = "Test*"                # Test class naming pattern (e.g., TestDatabase)
python_functions = "test_*"             # Test function naming pattern
addopts = "--strict-markers -v"         # Strict markers enforced, verbose output
